Added some examples and also changed the language from french to english

--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -20,80 +20,211 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Étapes de processing disponibles\n",
+    "## Available Processing Steps\n",
     "\n",
-    "### Pré-processing\n",
+    "### Pre-processing\n",
     "- **CliffordTDecomposition** (pennylane_calculquebec/processing/steps/base_decomposition.py)  \n",
-    "  Décompose les portes jusqu’à l’ensemble Clifford+T+RZ.  \n",
-    "  Paramètres : aucun.\n",
+    "  Decomposes gates into the Clifford+T+RZ set.  \n",
+    "  Parameters: None.\n",
+    "\n",
+    "  **Example**:\n",
+    "\n",
+    "  ```python\n",
+    "  import pennylane as qml\n",
+    "  from pennylane_calculquebec.processing.steps import CliffordTDecomposition\n",
+    "  from pennylane_calculquebec.processing.config import ProcessingConfig\n",
+    "\n",
+    "  # 1. Define a simple circuit containing a T gate and an RZ rotation\n",
+    "  dev = qml.device(\"default.qubit\", wires=1)\n",
+    "  @qml.qnode(dev)\n",
+    "  def circuit():\n",
+    "      qml.T(wires=0)         # non-Clifford gate\n",
+    "      qml.RZ(0.5, wires=0)   # arbitrary phase rotation\n",
+    "      return qml.expval(qml.PauliZ(0))\n",
+    "\n",
+    "  # 2. Instantiate the preprocessing step\n",
+    "  step = CliffordTDecomposition()\n",
+    "  config = ProcessingConfig(step)\n",
+    "\n",
+    "  # 3. Extract and transform the tape\n",
+    "  tape = circuit.qtape\n",
+    "  decomposed = step.execute(tape)\n",
+    "\n",
+    "  # 4. Visualize the decomposed circuit (only Clifford+T+RZ remain)\n",
+    "  print(qml.draw(decomposed)())\n",
+    "  ```\n",
     "\n",
     "- **DecomposeReadout** (pennylane_calculquebec/processing/steps/decompose_readout.py)  \n",
-    "  Convertit les observables en lectures en base computationnelle.  \n",
-    "  Paramètres : aucun.\n",
+    "  Converts observables into computational basis measurements.  \n",
+    "  Parameters: None.\n",
+    "\n",
+    "  **Example**:\n",
+    "\n",
+    "  ```python\n",
+    "  import pennylane as qml\n",
+    "  from pennylane_calculquebec.processing.steps import DecomposeReadout\n",
+    "  from pennylane_calculquebec.processing.config import ProcessingConfig\n",
+    "\n",
+    "  # Build a circuit returning an observable\n",
+    "  dev = qml.device(\"default.qubit\", wires=1)\n",
+    "  @qml.qnode(dev)\n",
+    "  def circuit():\n",
+    "      qml.Hadamard(wires=0)\n",
+    "      return qml.expval(qml.PauliZ(wires=0))\n",
+    "\n",
+    "  # Apply DecomposeReadout to convert expectation to computational basis measurement\n",
+    "  step = DecomposeReadout()\n",
+    "  tape = circuit.qtape\n",
+    "  post = step.execute(tape)\n",
+    "\n",
+    "  # Inspect the measurement operators on the new tape\n",
+    "  print(post.measurements)\n",
+    "  ```\n",
     "\n",
     "- **GateNoiseSimulation** (pennylane_calculquebec/processing/steps/gate_noise_simulation.py)  \n",
-    "  Injecte du bruit de portes selon le modèle MonarQ.  \n",
-    "  Paramètres : `machine_name`, `use_benchmark`.\n",
+    "  Injects gate noise according to the MonarQ model.  \n",
+    "  Parameters: `machine_name`, `use_benchmark`.\n",
+    "\n",
+    "  **Example**:\n",
+    "\n",
+    "  ```python\n",
+    "  import pennylane as qml\n",
+    "  from pennylane_calculquebec.processing.steps import GateNoiseSimulation\n",
+    "\n",
+    "  # Simple circuit without noise\n",
+    "  dev = qml.device(\"default.qubit\", wires=1)\n",
+    "  @qml.qnode(dev)\n",
+    "  def circuit():\n",
+    "      qml.Hadamard(wires=0)\n",
+    "      return qml.probs(wires=0)\n",
+    "\n",
+    "  # Inject gate noise using the Yamaska machine profile\n",
+    "  noise_step = GateNoiseSimulation(\"yamaska\", use_benchmark=True)\n",
+    "  noisy_tape = noise_step.execute(circuit.qtape)\n",
+    "\n",
+    "  # Execute the noisy circuit\n",
+    "  noisy_qnode = qml.QNode(lambda: None, dev)\n",
+    "  noisy_qnode.tape = noisy_tape\n",
+    "  print(noisy_qnode())  # probabilities with simulated gate errors\n",
+    "  ```\n",
     "\n",
     "- **MonarqDecomposition** (pennylane_calculquebec/processing/steps/native_decomposition.py)  \n",
-    "  Transforme les opérations en portes natives MonarQ.  \n",
-    "  Paramètres : aucun.\n",
+    "  Converts operations to MonarQ native gates.  \n",
+    "  Parameters: None.\n",
+    "\n",
+    "  **Example**:\n",
+    "\n",
+    "  ```python\n",
+    "  import pennylane as qml\n",
+    "  from pennylane_calculquebec.processing.steps import MonarqDecomposition\n",
+    "\n",
+    "  # Circuit using non-native ops\n",
+    "  dev = qml.device(\"default.qubit\", wires=1)\n",
+    "  @qml.qnode(dev)\n",
+    "  def circuit():\n",
+    "      qml.SWAP(wires=[0, 0])  # placeholder non-native\n",
+    "      return qml.expval(qml.PauliZ(0))\n",
+    "\n",
+    "  # Convert to MonarQ native gates\n",
+    "  step = MonarqDecomposition()\n",
+    "  native = step.execute(circuit.qtape)\n",
+    "  print(qml.draw(native)())  # only MonarQ primitive gates\n",
+    "  ```\n",
     "\n",
     "- **IterativeCommuteAndMerge** (pennylane_calculquebec/processing/steps/optimization.py)  \n",
-    "  Optimise le circuit par commutations, fusions de rotations et annulations.  \n",
-    "  Paramètres : aucun.\n",
+    "  Optimizes the circuit by commuting, merging rotations, and cancellations.  \n",
+    "  Parameters: None.\n",
+    "\n",
+    "  **Example**:\n",
+    "\n",
+    "  ```python\n",
+    "  import pennylane as qml\n",
+    "  from pennylane_calculquebec.processing.steps import IterativeCommuteAndMerge\n",
+    "\n",
+    "  # Circuit with redundant rotations\n",
+    "  dev = qml.device(\"default.qubit\", wires=1)\n",
+    "  @qml.qnode(dev)\n",
+    "  def circuit():\n",
+    "      qml.RX(0.5, wires=0)\n",
+    "      qml.RX(-0.5, wires=0)  # cancelling rotation\n",
+    "      return qml.expval(qml.PauliX(0))\n",
+    "\n",
+    "  # Optimize by merging and cancelling\n",
+    "  step = IterativeCommuteAndMerge()\n",
+    "  optimized = step.execute(circuit.qtape)\n",
+    "  print(qml.draw(optimized)())  # empty or minimal operations\n",
+    "  ```\n",
     "\n",
     "- **ASTAR**, **ISMAGS**, **VF2** (pennylane_calculquebec/processing/steps/placement.py)  \n",
-    "  Algorithmes de placement pour mapper les qubits logiques sur les qubits physiques.  \n",
-    "  Paramètres : `machine_name`, `use_benchmark`, `q1_acceptance`, `q2_acceptance`, `excluded_qubits`, `excluded_couplers`.\n",
+    "  Placement algorithms to map logical qubits onto physical qubits.  \n",
+    "  Parameters: `machine_name`, `use_benchmark`, `q1_acceptance`, `q2_acceptance`, `excluded_qubits`, `excluded_couplers`.\n",
+    "\n",
+    "  **Example (ASTAR)**:\n",
+    "\n",
+    "  ```python\n",
+    "  from pennylane_calculquebec.processing.steps import ASTAR\n",
+    "\n",
+    "  # Map 2-qubit CNOT on Yamaska topology\n",
+    "  step = ASTAR(\"yamaska\", use_benchmark=False)\n",
+    "  # Provide dummy tape with two-qubit gate\n",
+    "  # ...existing code for generating 2-qubit tape...\n",
+    "  mapped = step.execute(tape)\n",
+    "  print(mapped.operations)\n",
+    "  ```\n",
     "\n",
     "- **Swaps** (pennylane_calculquebec/processing/steps/routing.py)  \n",
-    "  Algorithme de routage qui insère des SWAPs pour relier des qubits non-adjacents.  \n",
-    "  Paramètres : `machine_name`, `use_benchmark`, `q1_acceptance`, `q2_acceptance`, `excluded_qubits`, `excluded_couplers`.\n",
+    "  Routing algorithm that inserts SWAPs to connect non-adjacent qubits.  \n",
+    "  Parameters: `machine_name`, `use_benchmark`, `q1_acceptance`, `q2_acceptance`, `excluded_qubits`, `excluded_couplers`.\n",
+    "\n",
+    "  **Example**:\n",
+    "\n",
+    "  ```python\n",
+    "  from pennylane_calculquebec.processing.steps import Swaps\n",
+    "\n",
+    "  # Route a non-adjacent CNOT on Yamaska\n",
+    "  step = Swaps(\"yamaska\", use_benchmark=True)\n",
+    "  mapped = step.execute(tape)  # tape with CNOT on distant wires\n",
+    "  print(mapped.operations)  # contains added SWAP gates\n",
+    "  ```\n",
     "\n",
     "- **PrintTape**, **PrintWires** (pennylane_calculquebec/processing/steps/print_steps.py)  \n",
-    "  Étapes de debug qui affichent le circuit ou les fils.  \n",
-    "  Paramètres : aucun.\n",
+    "  Debug steps that print the circuit or wires.  \n",
+    "  Parameters: None.\n",
+    "\n",
+    "  **Example (PrintTape)**:\n",
+    "\n",
+    "  ```python\n",
+    "  from pennylane_calculquebec.processing.steps import PrintTape\n",
+    "\n",
+    "  step = PrintTape()\n",
+    "  tape = circuit.qtape\n",
+    "  # Prints each operation in the tape\n",
+    "  step.execute(tape)\n",
+    "  ```\n",
     "\n",
     "### Post-processing\n",
     "- **IBUReadoutMitigation** (pennylane_calculquebec/processing/steps/readout_error_mitigation.py)  \n",
-    "  Mitigation itérative bayésienne des erreurs de lecture.  \n",
-    "  Paramètres : `machine_name`, `initial_guess`.\n",
+    "  Iterative Bayesian readout error mitigation.  \n",
+    "  Parameters: `machine_name`, `initial_guess`.\n",
     "\n",
     "- **MatrixReadoutMitigation** (pennylane_calculquebec/processing/steps/readout_error_mitigation.py)  \n",
-    "  Mitigation matricielle (inversion de matrice) des erreurs de lecture.  \n",
-    "  Paramètres : `machine_name`.\n",
+    "  Matrix inversion readout error mitigation.  \n",
+    "  Parameters: `machine_name`.\n",
     "\n",
     "- **ReadoutNoiseSimulation** (pennylane_calculquebec/processing/steps/readout_noise_simulation.py)  \n",
-    "  Simule du bruit de lecture sur les résultats.  \n",
-    "  Paramètres : `machine_name`, `use_benchmark`.\n",
+    "  Simulates readout noise on the results.  \n",
+    "  Parameters: `machine_name`, `use_benchmark`.\n",
     "\n",
     "- **PrintResults** (pennylane_calculquebec/processing/steps/print_steps.py)  \n",
-    "  Étape de debug qui affiche les résultats.  \n",
-    "  Paramètres : aucun."
+    "  Debug step that prints the results.  \n",
+    "  Parameters: None."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pennylane_calculquebec.processing.steps.decompose_readout.DecomposeReadout object at 0x000001FF94369600>\n",
-      "<pennylane_calculquebec.processing.steps.base_decomposition.CliffordTDecomposition object at 0x000001FF94369E40>\n",
-      "<pennylane_calculquebec.processing.steps.placement.ISMAGS object at 0x000001FF94369B40>\n",
-      "<pennylane_calculquebec.processing.steps.routing.Swaps object at 0x000001FF943691B0>\n",
-      "<pennylane_calculquebec.processing.steps.optimization.IterativeCommuteAndMerge object at 0x000001FF94369990>\n",
-      "<pennylane_calculquebec.processing.steps.native_decomposition.MonarqDecomposition object at 0x000001FF943BF850>\n",
-      "<pennylane_calculquebec.processing.steps.optimization.IterativeCommuteAndMerge object at 0x000001FF943BF6A0>\n",
-      "<pennylane_calculquebec.processing.steps.native_decomposition.MonarqDecomposition object at 0x000001FF943BF0A0>\n",
-      "<pennylane_calculquebec.processing.steps.readout_error_mitigation.IBUReadoutMitigation object at 0x000001FF94369240>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pennylane_calculquebec.processing.config import MonarqDefaultConfig\n",
     "from pennylane_calculquebec.processing.steps import IBUReadoutMitigation\n",
@@ -114,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,24 +287,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.PrintCircuit object at 0x000001FFDD2FE050>\n",
-      "<pennylane_calculquebec.processing.steps.base_decomposition.CliffordTDecomposition object at 0x000001FFDD2FE110>\n",
-      "<pennylane_calculquebec.processing.steps.placement.ASTAR object at 0x000001FFDD2FFFD0>\n",
-      "<pennylane_calculquebec.processing.steps.routing.Swaps object at 0x000001FF94369B70>\n",
-      "<pennylane_calculquebec.processing.steps.optimization.IterativeCommuteAndMerge object at 0x000001FF94368A00>\n",
-      "<pennylane_calculquebec.processing.steps.native_decomposition.MonarqDecomposition object at 0x000001FF943695D0>\n",
-      "<__main__.PrintCircuit object at 0x000001FF94368250>\n",
-      "<__main__.PrintResults object at 0x000001FF94368E50>\n",
-      "<pennylane_calculquebec.processing.steps.readout_error_mitigation.IBUReadoutMitigation object at 0x000001FF9436A170>\n",
-      "<__main__.PrintResults object at 0x000001FF94369ED0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this custom config will print the circuit, transpile, print the transpiled circuit\n",
     "# and then print the unmitigated results, followed by the mitigated results.\n",
@@ -203,21 +317,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: ──H─╭●────┤  Counts\n",
-      "1: ────╰X─╭●─┤  Counts\n",
-      "2: ───────╰X─┤  Counts\n",
-      "H(0) CNOT(wires=[0, 1]) CNOT(wires=[1, 2])\n",
-      "X90(wires=[1]) X90(wires=[0]) Z(0) CZ(wires=[4, 0]) X90(wires=[0]) X90(wires=[4]) Z(0) Z(4) CZ(wires=[0, 4]) X90(wires=[4]) X90(wires=[0]) Z(4) Z(0) CZ(wires=[4, 0]) X90(wires=[4]) Z(4) CZ(wires=[1, 4]) X90(wires=[4]) Z(4) CZ(wires=[4, 0]) X90(wires=[0]) X90(wires=[4]) Z(0) Z(4) CZ(wires=[0, 4]) X90(wires=[4]) X90(wires=[0]) Z(4) Z(0) CZ(wires=[4, 0]) X90(wires=[0]) X90(wires=[4]) Z(4) CZ(wires=[0, 4]) X90(wires=[4])\n",
-      "{'000': 428, '001': 51, '010': 26, '011': 60, '100': 75, '101': 75, '110': 72, '111': 213}\n",
-      "{'000': 465, '001': 38, '010': 5, '011': 56, '100': 37, '101': 64, '110': 44, '111': 290}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pennylane as qml\n",
     "from pennylane_calculquebec.API.client import MonarqClient\n",
@@ -254,7 +354,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
