Modified the Decomposition Code

--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -31,27 +31,33 @@
     "\n",
     "  ```python\n",
     "  import pennylane as qml\n",
+    "  from pennylane.workflow import construct_tape\n",
+    "  from pennylane.drawer import tape_text, tape_mpl\n",
     "  from pennylane_calculquebec.processing.steps import CliffordTDecomposition\n",
-    "  from pennylane_calculquebec.processing.config import ProcessingConfig\n",
     "\n",
-    "  # 1. Define a simple circuit containing a T gate and an RZ rotation\n",
+    "  # 1. define device & QNode\n",
     "  dev = qml.device(\"default.qubit\", wires=1)\n",
     "  @qml.qnode(dev)\n",
     "  def circuit():\n",
-    "      qml.T(wires=0)         # non-Clifford gate\n",
-    "      qml.RZ(0.5, wires=0)   # arbitrary phase rotation\n",
+    "      qml.T(wires=0)\n",
+    "      qml.RZ(0.5, wires=0)\n",
     "      return qml.expval(qml.PauliZ(0))\n",
     "\n",
-    "  # 2. Instantiate the preprocessing step\n",
-    "  step = CliffordTDecomposition()\n",
-    "  config = ProcessingConfig(step)\n",
+    "  # 2. build raw tape (user ops only)\n",
+    "  tape = construct_tape(circuit, level=\"top\")()\n",
     "\n",
-    "  # 3. Extract and transform the tape\n",
-    "  tape = circuit.qtape\n",
+    "  # 3. apply your CalculQuébec decomposition\n",
+    "  step       = CliffordTDecomposition()\n",
     "  decomposed = step.execute(tape)\n",
     "\n",
-    "  # 4. Visualize the decomposed circuit (only Clifford+T+RZ remain)\n",
-    "  print(qml.draw(decomposed)())\n",
+    "  # 4a. text drawing\n",
+    "  print(tape_text(decomposed, show_wire_labels=True))\n",
+    "\n",
+    "  # 4b. matplotlib drawing\n",
+    "  fig, ax = tape_mpl(decomposed)\n",
+    "  ax.set_title(\"Clifford+T Decomposed Circuit\")\n",
+    "  fig.savefig(\"decomposed_circuit.png\")  # or plt.show()\n",
+    "\n",
     "  ```\n",
     "\n",
     "- **DecomposeReadout** (pennylane_calculquebec/processing/steps/decompose_readout.py)  \n",
