Changed the code in the example until MonarqDecomposition

--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -68,23 +68,27 @@
     "\n",
     "  ```python\n",
     "  import pennylane as qml\n",
+    "  from pennylane.workflow import construct_tape\n",
     "  from pennylane_calculquebec.processing.steps import DecomposeReadout\n",
-    "  from pennylane_calculquebec.processing.config import ProcessingConfig\n",
     "\n",
     "  # Build a circuit returning an observable\n",
     "  dev = qml.device(\"default.qubit\", wires=1)\n",
+    "\n",
     "  @qml.qnode(dev)\n",
     "  def circuit():\n",
     "      qml.Hadamard(wires=0)\n",
     "      return qml.expval(qml.PauliZ(wires=0))\n",
     "\n",
+    "  # Construct the tape for the QNode\n",
+    "  tape = construct_tape(circuit)()\n",
+    "\n",
     "  # Apply DecomposeReadout to convert expectation to computational basis measurement\n",
     "  step = DecomposeReadout()\n",
-    "  tape = circuit.qtape\n",
     "  post = step.execute(tape)\n",
     "\n",
     "  # Inspect the measurement operators on the new tape\n",
     "  print(post.measurements)\n",
+    "\n",
     "  ```\n",
     "\n",
     "- **GateNoiseSimulation** (pennylane_calculquebec/processing/steps/gate_noise_simulation.py)  \n",
@@ -123,18 +127,20 @@
     "  ```python\n",
     "  import pennylane as qml\n",
     "  from pennylane_calculquebec.processing.steps import MonarqDecomposition\n",
+    "  from pennylane.workflow import construct_tape\n",
+    "  from pennylane.drawer import tape_text\n",
     "\n",
     "  # Circuit using non-native ops\n",
-    "  dev = qml.device(\"default.qubit\", wires=1)\n",
+    "  dev = qml.device(\"default.qubit\", wires=2)\n",
     "  @qml.qnode(dev)\n",
     "  def circuit():\n",
-    "      qml.SWAP(wires=[0, 0])  # placeholder non-native\n",
+    "      qml.SWAP(wires=[0, 1])  # placeholder non-native\n",
     "      return qml.expval(qml.PauliZ(0))\n",
     "\n",
     "  # Convert to MonarQ native gates\n",
     "  step = MonarqDecomposition()\n",
-    "  native = step.execute(circuit.qtape)\n",
-    "  print(qml.draw(native)())  # only MonarQ primitive gates\n",
+    "  native = step.execute(construct_tape(circuit)())\n",
+    "  print(tape_text(native))  # only MonarQ primitive gates\n",
     "  ```\n",
     "\n",
     "- **IterativeCommuteAndMerge** (pennylane_calculquebec/processing/steps/optimization.py)  \n",
