fixed all the code snippet

--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -151,7 +151,9 @@
     "\n",
     "  ```python\n",
     "  import pennylane as qml\n",
+    "  from pennylane.workflow import construct_tape\n",
     "  from pennylane_calculquebec.processing.steps import IterativeCommuteAndMerge\n",
+    "  from pennylane.drawer import tape_text\n",
     "\n",
     "  # Circuit with redundant rotations\n",
     "  dev = qml.device(\"default.qubit\", wires=1)\n",
@@ -163,8 +165,8 @@
     "\n",
     "  # Optimize by merging and cancelling\n",
     "  step = IterativeCommuteAndMerge()\n",
-    "  optimized = step.execute(circuit.qtape)\n",
-    "  print(qml.draw(optimized)())  # empty or minimal operations\n",
+    "  optimized = step.execute(construct_tape(circuit)())\n",
+    "  print(tape_text(optimized)) # empty or minimal operations\n",
     "  ```\n",
     "\n",
     "- **ASTAR**, **ISMAGS**, **VF2** (pennylane_calculquebec/processing/steps/placement.py)  \n",
@@ -174,14 +176,32 @@
     "  **Example (ASTAR)**:\n",
     "\n",
     "  ```python\n",
+    "  import pennylane as qml\n",
+    "  from pennylane.workflow import construct_tape\n",
     "  from pennylane_calculquebec.processing.steps import ASTAR\n",
+    "  from pennylane.drawer import tape_text  # for visualization\n",
     "\n",
-    "  # Map 2-qubit CNOT on Yamaska topology\n",
+    "  # 1. Create a 2-qubit device\n",
+    "  dev = qml.device(\"default.qubit\", wires=2)\n",
+    "\n",
+    "  # 2. Build a 2-qubit QNode (with a CNOT gate)\n",
+    "  @qml.qnode(dev)\n",
+    "  def circuit():\n",
+    "      qml.Hadamard(wires=0)\n",
+    "      qml.CNOT(wires=[0, 1])\n",
+    "      return qml.expval(qml.PauliZ(0))\n",
+    "\n",
+    "  # 3. Extract the tape (QuantumScript) from the QNode\n",
+    "  tape = construct_tape(circuit)()\n",
+    "\n",
+    "  # 4. Apply ASTAR placement algorithm\n",
     "  step = ASTAR(\"yamaska\", use_benchmark=False)\n",
-    "  # Provide dummy tape with two-qubit gate\n",
-    "  # ...existing code for generating 2-qubit tape...\n",
     "  mapped = step.execute(tape)\n",
-    "  print(mapped.operations)\n",
+    "\n",
+    "  # 5. Print the remapped operations\n",
+    "  print(\"Mapped circuit on Yamaska topology:\")\n",
+    "  print(tape_text(mapped))  # Pretty-prints QuantumScript\n",
+    "\n",
     "  ```\n",
     "\n",
     "- **Swaps** (pennylane_calculquebec/processing/steps/routing.py)  \n",
@@ -191,12 +211,38 @@
     "  **Example**:\n",
     "\n",
     "  ```python\n",
+    "  import pennylane as qml\n",
+    "  from pennylane.workflow import construct_tape\n",
+    "  from pennylane.drawer import tape_text                # pretty-print tapes\n",
     "  from pennylane_calculquebec.processing.steps import Swaps\n",
     "\n",
-    "  # Route a non-adjacent CNOT on Yamaska\n",
-    "  step = Swaps(\"yamaska\", use_benchmark=True)\n",
-    "  mapped = step.execute(tape)  # tape with CNOT on distant wires\n",
-    "  print(mapped.operations)  # contains added SWAP gates\n",
+    "  # ------------------------------------------------------------------\n",
+    "  # 1) Build a tiny circuit whose 2-qubit gate is *not* adjacent on\n",
+    "  #    Yamaska.  We'll assume Yamaska qubits are numbered 0..59\n",
+    "  #    and that 0 and 5 are *not* directly connected.\n",
+    "  # ------------------------------------------------------------------\n",
+    "  dev = qml.device(\"default.qubit\", wires=6)            # at least wires 0–5\n",
+    "\n",
+    "  @qml.qnode(dev)\n",
+    "  def circuit():\n",
+    "      qml.Hadamard(wires=0)\n",
+    "      qml.CNOT(wires=[0, 5])                            # <-- distant pair\n",
+    "      return qml.expval(qml.PauliZ(0))\n",
+    "\n",
+    "  tape = construct_tape(circuit)()                      # QuantumScript\n",
+    "\n",
+    "  print(\"Original circuit:\")\n",
+    "  print(tape_text(tape), \"\\n\")\n",
+    "\n",
+    "  # ------------------------------------------------------------------\n",
+    "  # 2) Route with the Swaps algorithm\n",
+    "  # ------------------------------------------------------------------\n",
+    "  router = Swaps(\"yamaska\", use_benchmark=False)\n",
+    "  mapped  = router.execute(tape)\n",
+    "\n",
+    "  print(\"After routing with SWAPs:\")\n",
+    "  print(tape_text(mapped))\n",
+    "\n",
     "  ```\n",
     "\n",
     "- **PrintTape**, **PrintWires** (pennylane_calculquebec/processing/steps/print_steps.py)  \n",
@@ -206,12 +252,45 @@
     "  **Example (PrintTape)**:\n",
     "\n",
     "  ```python\n",
-    "  from pennylane_calculquebec.processing.steps import PrintTape\n",
+    "  import pennylane as qml\n",
+    "  from pennylane.workflow import construct_tape\n",
+    "  from pennylane_calculquebec.processing.steps import PrintTape, PrintWires, PrintResults\n",
     "\n",
-    "  step = PrintTape()\n",
-    "  tape = circuit.qtape\n",
-    "  # Prints each operation in the tape\n",
-    "  step.execute(tape)\n",
+    "  # 1. Create a device with shots enabled\n",
+    "  dev = qml.device(\"default.qubit\", wires=2, shots=10)\n",
+    "\n",
+    "  # 2. Define a circuit\n",
+    "  @qml.qnode(dev)\n",
+    "  def circuit():\n",
+    "      qml.Hadamard(wires=0)\n",
+    "      qml.CNOT(wires=[0, 1])\n",
+    "      return qml.sample(qml.PauliZ(0))  # sample returns +1/-1\n",
+    "\n",
+    "  # 3. Extract the tape\n",
+    "  tape = construct_tape(circuit)()\n",
+    "\n",
+    "  # 4. Initialize steps\n",
+    "  print_tape = PrintTape()\n",
+    "  print_wires = PrintWires()\n",
+    "  print_results = PrintResults()\n",
+    "\n",
+    "  # 5. Run preproc steps\n",
+    "  print(\"\\n--- PrintTape ---\")\n",
+    "  print_tape.execute(tape)\n",
+    "\n",
+    "  print(\"\\n--- PrintWires ---\")\n",
+    "  print_wires.execute(tape)\n",
+    "\n",
+    "  # 6. Execute the tape\n",
+    "  results = qml.execute([tape], dev)[0]  # no shots=10 here\n",
+    "\n",
+    "  # 7. Format results as counts\n",
+    "  import collections\n",
+    "  counts = dict(collections.Counter(results.tolist()))\n",
+    "\n",
+    "  print(\"\\n--- PrintResults ---\")\n",
+    "  print_results.execute(tape, counts)\n",
+    "\n",
     "  ```\n",
     "\n",
     "### Post-processing\n",
