--- a/doc/FR/prise_en_main.ipynb
+++ b/doc/FR/prise_en_main.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Ce document a pour objectif d'expliquer ce dont vous avez besoin pour utiliser MonarqDevice.\n",
     "\n",
-    "Ce \"device\" vous permet de communiquer directement avec MonarQ sans utiliser Snowflurry comme intermédiaire. Cela a pour avantage de ne pas passer par les appels et la précompilation en Julia. MonarqDevice est aussi équipé de transpileur fait par Calcul Québec, qui est optimisé pour MonarQ.\n"
+    "Ce \"device\" vous permet de communiquer directement avec MonarQ. MonarqDevice est aussi équipé de transpileur fait par Calcul Québec, qui est optimisé pour MonarQ.\n"
    ]
   },
   {
