--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This document is aimed to explain what you need to know in order to use the MonarqDevice.\n",
     "\n",
-    "This device lets you communicate directly with MonarQ without using Snowflurry as an intermediate. This has the advantage of loosing the need to use Julia or other time consuming precompilings and calls. The MonarqDevice is also equipped with a compiler made by Calcul Quebec, which is optimized to work on MonarQ.\n"
+    "This device lets you communicate directly with MonarQ. The MonarqDevice is also equipped with a compiler made by Calcul Quebec, which is optimized to work on MonarQ.\n"
    ]
   },
   {
@@ -54,17 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Detected IPython. Loading juliacall extension. See https://juliapy.github.io/PythonCall.jl/stable/compat/#IPython\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this line imports the pennylane library. It contains everything necessary for quantum programming\n",
     "import pennylane as qml\n",
@@ -82,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,19 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: ──H─╭●────┤  Counts\n",
-      "1: ────╰X─╭●─┤  Counts\n",
-      "2: ───────╰X─┤  Counts\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this line indicates that the function underneath is a quantum function (qnode)\n",
     "@qml.qnode(dev)\n",
@@ -205,17 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'000': 408, '001': 68, '010': 51, '011': 65, '100': 36, '101': 41, '110': 89, '111': 242}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this line runs the circuit and returns the results in the \"results\" variable\n",
     "results = circuit()\n",
@@ -240,7 +214,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
