updated the documentation to reflect the new usage of the client classes

--- a/doc/FR/prise_en_main.ipynb
+++ b/doc/FR/prise_en_main.ipynb
@@ -55,15 +55,13 @@
     "import pennylane as qml\n",
     "\n",
     "# Cette ligne importe la classe client, nécessaire pour s'authentifier sur MonarQ\n",
-    "from pennylane_calculquebec.API.client import MonarqClient"
+    "from pennylane_calculquebec.API.client import CalculQuebecClient"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "3. Créez un [client](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb) pour votre device."
-   ]
+   "source": "3. Créez un `Client` pour votre device. Pour plus de détails sur l'utilisation de vos informations d'authentification et de l'identifiant de projet, visitez [cette page](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb)"
   },
   {
    "cell_type": "code",
@@ -72,10 +70,11 @@
    "outputs": [],
    "source": [
     "# Voilà comment créer un client. Changez les valeurs dans la parenthèse pour vos identifiants\n",
-    "# Assurez vous d'avoir créé un projet, et d'utiliser le nom exact de ce dernier\n",
-    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
-    "my_client = MonarqClient(\n",
-    "    \"https://manager.anyonlabs.com\", \"boucherf\", \"jtl00AlxQsmOPaJsKYJP2+AF8E27rzS0\"\n",
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",  # plus d'information sur ce paramètre dans using_client.ipynb\n",
     ")"
    ]
   },
@@ -108,20 +107,26 @@
    "source": [
     "# Vous pouvez définir le nombre de qubits (cela créera un ensemble de qubits de 0 à n exclusivement)\n",
     "dev = qml.device(\n",
-    "    \"monarq.default\", client=my_client, shots=1000, wires=3\n",
-    ")  # celà définira les qubits [0, 1, 2], soit 3 qubits\n",
+    "    \"monarq.default\",\n",
+    "    client=my_client,\n",
+    "    shots=1000,\n",
+    "    wires=3,  # celà définira les qubits [0, 1, 2], soit 3 qubits\n",
+    ")\n",
     "\n",
     "# Vous pouvez aussi définir quels qubits exactement devront être utilisés\n",
     "dev = qml.device(\n",
-    "    \"monarq.default\", client=my_client, shots=1000, wires=[4, 1, 5]\n",
-    ")  # celà définira les qubits [4, 1, 5]\n",
+    "    \"monarq.default\",\n",
+    "    client=my_client,\n",
+    "    shots=1000,\n",
+    "    wires=[4, 1, 5],  # celà définira les qubits [4, 1, 5]\n",
+    ")\n",
     "\n",
     "# Vous n'êtes pas obligé de spécifier de qubits. Le device se fiera alors aux qubits utilisés par les opérations et mesures de votre circuit\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n",
-    "\n",
-    "# Vous devez définir un nom pour votre circuit, et spécifier le projet dans lequel vous voulez travailler.\n",
-    "dev.circuit_name = \"your circuit\"\n",
-    "dev.project_name = \"default\""
+    "dev = qml.device(\n",
+    "    \"monarq.default\",\n",
+    "    client=my_client,\n",
+    "    shots=1000,\n",
+    ")"
    ]
   },
   {
