--- a/doc/for_developers/using_configurations.ipynb
+++ b/doc/for_developers/using_configurations.ipynb
@@ -29,12 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pennylane_calculquebec.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.API.client import CalculQuebecClient\n",
     "import pennylane as qml\n",
     "\n",
     "# change the information in the client for your credentials\n",
-    "my_client = MonarqClient(\n",
-    "    \"your host\", \"your user\", \"your access token\", \"your project name\"\n",
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",\n",
     ")\n",
     "\n",
     "# no config passed in arguments = config = MonarqDefaultConfig\n",
