--- a/doc/for_developers/using_custom_steps.ipynb
+++ b/doc/for_developers/using_custom_steps.ipynb
@@ -652,10 +652,15 @@
    "outputs": [],
    "source": [
     "import pennylane as qml\n",
-    "from pennylane_calculquebec.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.API.client import CalculQuebecClient\n",
     "\n",
     "# Change the values in the parentheses for your credentials\n",
-    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",\n",
+    ")\n",
     "\n",
     "dev = qml.device(\n",
     "    \"monarq.default\", client=my_client, processing_config=my_config, shots=1000\n",
