--- a/doc/for_developers/using_transpiler.ipynb
+++ b/doc/for_developers/using_transpiler.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pennylane_calculquebec.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.API.client import CalculQuebecClient\n",
     "import pennylane as qml"
    ]
   },
@@ -40,7 +40,12 @@
    ],
    "source": [
     "# change the information in the client for your credentials\n",
-    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")\n",
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",\n",
+    ")\n",
     "\n",
     "# no configuration argument => config is set to MonarqDefaultConfig\n",
     "dev = qml.device(\"monarq.default\", shots=1000, wires=[0, 1, 2], client=my_client)\n",
