--- a/doc/for_developers/job_events.ipynb
+++ b/doc/for_developers/job_events.ipynb
@@ -21,13 +21,15 @@
    "outputs": [],
    "source": [
     "import pennylane as qml\n",
-    "from pennylane_calculquebec.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.API.client import CalculQuebecClient\n",
     "\n",
-    "client = MonarqClient(\"your host\", \"your user\", \"your access token\")\n",
-    "dev = qml.device(\"monarq.default\", client=client, shots=1000)\n",
-    "\n",
-    "dev.circuit_name = \"a circuit\"\n",
-    "dev.project_name = \"default\""
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",\n",
+    ")\n",
+    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n"
    ]
   },
   {
