--- a/doc/for_developers/using_api_adapter.ipynb
+++ b/doc/for_developers/using_api_adapter.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "from pennylane_calculquebec.API.adapter import ApiAdapter\n",
-    "from pennylane_calculquebec.API.client import MonarqClient"
+    "from pennylane_calculquebec.API.client import CalculQuebecClient"
    ]
   },
   {
@@ -34,7 +34,7 @@
    "source": [
     "Initialize ApiAdapter with a client object, containing your informations\n",
     "\n",
-    "host, user and access_token must be configured with your own informations"
+    "host, user, access_token and project_id must be configured with your own informations"
    ]
   },
   {
@@ -43,9 +43,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# change values in the parentheses for your credentials\n",
-    "my_client = MonarqClient(\n",
-    "    \"your host\", \"your user\", \"your access token\", \"your project name\"\n",
+    "# as seen in getting_started and using_client notebooks, create a client\n",
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",\n",
     ")\n",
     "\n",
     "# this is typically done behind the scene in the monarq.default device.\n",
