--- a/doc/for_developers/using_client.ipynb
+++ b/doc/for_developers/using_client.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "## Client\n",
     "\n",
-    "In order to run jobs on Monarq, you will need to provide information to the device :\n",
+    "In order to run jobs on MonarQ, you will need to provide information to the device using the a client class:\n",
     "\n",
-    "- host : the url to which monarq can be communicated with.\n",
+    "- host : the url to which monarq can be communicated with\n",
     "- user : your identifier\n",
     "- access token : the access pass that identifies you as a rightful user\n",
-    "- project name : (optional) the name of the project you want to run the job on "
+    "- project name or project id : the project you want to run your jobs on. For simplicity purposes, you can use the project name if you don't have access to multiples projects under that name. All accounts have a project named \"default\" that you can use. Ultimately, we highly recommend using project ids as they are unique. They are found in the profile section of the Thunderhead interface."
    ]
   },
   {
@@ -35,7 +35,9 @@
    "outputs": [],
    "source": [
     "import pennylane as qml\n",
-    "from pennylane_calculquebec.API.client import MonarqClient"
+    "from pennylane_calculquebec.API.client import (\n",
+    "    CalculQuebecClient,  # CalculQuebecClient is a type of ApiClient\n",
+    ")"
    ]
   },
   {
@@ -52,8 +54,11 @@
    "outputs": [],
    "source": [
     "# change the information in the client for your credentials\n",
-    "my_client = MonarqClient(\n",
-    "    \"your host\", \"your user\", \"your access token\", \"your project name\"\n",
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",  # more information about this parameter in using_client.ipynb\n",
     ")"
    ]
   },
@@ -71,7 +76,11 @@
    "outputs": [],
    "source": [
     "# this will create a device that lets you communicate with MonarQ using your credentials\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)"
+    "dev = qml.device(\n",
+    "    \"monarq.default\",\n",
+    "    client=my_client,\n",
+    "    shots=1000,\n",
+    ")"
    ]
   }
  ],
