--- a/doc/for_developers/using_custom_gates.ipynb
+++ b/doc/for_developers/using_custom_gates.ipynb
@@ -380,11 +380,14 @@
    ],
    "source": [
     "from pennylane_calculquebec.processing.config import EmptyConfig\n",
-    "from pennylane_calculquebec.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.API.client import CalculQuebecClient\n",
     "\n",
     "# change the information in the client for your credentials\n",
-    "my_client = MonarqClient(\n",
-    "    \"your host\", \"your user\", \"your access token\", \"your project name\"\n",
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",\n",
     ")\n",
     "\n",
     "# say you want to transpile your circuit by yourself\n",
