--- a/doc/for_developers/using_different_backends.ipynb
+++ b/doc/for_developers/using_different_backends.ipynb
@@ -30,9 +30,14 @@
    ],
    "source": [
     "import pennylane as qml\n",
-    "from pennylane_calculquebec.API.client import MonarqClient\n",
+    "from pennylane_calculquebec.API.client import CalculQuebecClient\n",
     "\n",
-    "my_client = MonarqClient(\"my host\", \"my user\", \"my access tocken\", \"my project\")\n",
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",\n",
+    ")\n",
     "\n",
     "qml.device(\"monarq.default\", wires=4, client=my_client, shots=1000)\n",
     "qml.device(\"monarq.sim\", wires=4, client=my_client, shots=1000)\n",
