--- a/doc/getting_started.ipynb
+++ b/doc/getting_started.ipynb
@@ -14,16 +14,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Pour la version française, visitez [cette page](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/FR/prise_en_main.ipynb). "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pour la version française, visitez [cette page](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/FR/prise_en_main.ipynb). "
-   ]
+   "source": "Pour la version française, visitez [cette page](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/FR/prise_en_main.ipynb)."
   },
   {
    "cell_type": "markdown",
@@ -41,16 +32,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "0. First and foremost, you have to make sure to have python version ```3.10.x``` intalled"
-   ]
+   "source": "0. First and foremost, you have to make sure to have python version ```3.10.x``` installed"
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "1. install the plugin (refer to the README)"
-   ]
+   "source": "1. Install the plugin (refer to the [README](https://github.com/calculquebec/pennylane-calculquebec))"
   },
   {
    "cell_type": "markdown",
@@ -69,15 +56,13 @@
     "import pennylane as qml\n",
     "\n",
     "# this line imports the client class which is required for authenticating with MonarQ\n",
-    "from pennylane_calculquebec.API.client import MonarqClient"
+    "from pennylane_calculquebec.API.client import CalculQuebecClient"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "3. create a [client](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb) for your device"
-   ]
+   "source": "3. Create a `Client` for your device. For more details on how to use your credentials and project identifier, see [here](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/for_developers/using_client.ipynb)."
   },
   {
    "cell_type": "code",
@@ -86,16 +71,18 @@
    "outputs": [],
    "source": [
     "# This is how you create a client. Change the values in the parentheses for your credentials\n",
-    "# project is optional. It will be set to default if you don't specify it\n",
-    "my_client = MonarqClient(\"your host\", \"your user\", \"your access token\", \"your project\")"
+    "my_client = CalculQuebecClient(\n",
+    "    host=\"your host\",\n",
+    "    user=\"your user\",\n",
+    "    access_token=\"your access token\",\n",
+    "    project_id=\"your project id\",  # more information about this parameter in using_client.ipynb\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "4. create a device using your client"
-   ]
+   "source": "4. Create a device using your client"
   },
   {
    "cell_type": "markdown",
@@ -119,20 +106,26 @@
    "source": [
     "# You can set the wire amount (creating a range of wires from 0 inclusive to n exclusive)\n",
     "dev = qml.device(\n",
-    "    \"monarq.default\", client=my_client, shots=1000, wires=3\n",
-    ")  # this will set wires = [0, 1, 2]. ie 3 wires\n",
+    "    \"monarq.default\",\n",
+    "    client=my_client,\n",
+    "    shots=1000,\n",
+    "    wires=3,  # this will set wires = [0, 1, 2]. ie 3 wires\n",
+    ")\n",
     "\n",
     "# You can also set which wires you want to act on explicitely\n",
     "dev = qml.device(\n",
-    "    \"monarq.default\", client=my_client, shots=1000, wires=[4, 1, 5]\n",
-    ")  # this will set wires = [4, 1, 5\n",
+    "    \"monarq.default\",\n",
+    "    client=my_client,\n",
+    "    shots=1000,\n",
+    "    wires=[4, 1, 5],  # this will set wires = [4, 1, 5]\n",
+    ")\n",
     "\n",
     "# You don't have to set any wires. This will rely on wires that have been used on operations and measurements from the circuit\n",
-    "dev = qml.device(\"monarq.default\", client=my_client, shots=1000)\n",
-    "\n",
-    "# You need to set a name for your circuit and set the project on which you want to run this circuit\n",
-    "dev.circuit_name = \"your circuit\"\n",
-    "dev.project = \"your project\""
+    "dev = qml.device(\n",
+    "    \"monarq.default\",\n",
+    "    client=my_client,\n",
+    "    shots=1000,\n",
+    ")"
    ]
   },
   {
