added info about `circuit_name`

--- a/doc/for_developers/using_client.ipynb
+++ b/doc/for_developers/using_client.ipynb
@@ -11,7 +11,8 @@
     "- host : the url to which monarq can be communicated with\n",
     "- user : your identifier\n",
     "- access token : the access pass that identifies you as a rightful user\n",
-    "- project name or project id : the project you want to run your jobs on. For simplicity purposes, you can use the project name if you don't have access to multiples projects under that name. All accounts have a project named \"default\" that you can use. Ultimately, we highly recommend using project ids as they are unique. They are found in the profile section of the Thunderhead interface."
+    "- project name or project id : the project you want to run your jobs on. For simplicity purposes, you can use the project name if you don't have access to multiples projects under that name. All accounts have a project named \"default\" that you can use. Ultimately, we highly recommend using project ids as they are unique. They are found in the profile section of the Thunderhead interface.\n",
+    "- circuit name (Optional) : the name of your circuit. This is more so for identifying jobs in the Thunderhead."
    ]
   },
   {
@@ -49,18 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# change the information in the client for your credentials\n",
     "my_client = CalculQuebecClient(\n",
     "    host=\"your host\",\n",
     "    user=\"your user\",\n",
     "    access_token=\"your access token\",\n",
-    "    project_id=\"your project id\",  # more information about this parameter in using_client.ipynb\n",
+    "    project_id=\"your project id\",\n",
+    "    circuit_name=\"your circuit name\",  # optional\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
